makeover of frontpage to make it easier for people to figure out what CodaLab is and get started

--- a/codalab/apps/web/static/less/cl-variables.less
+++ b/codalab/apps/web/static/less/cl-variables.less
@@ -35,6 +35,9 @@
 @yellow:                #f0f575;
 @red:                   @brand-danger;
 
+@button-color:          #ffc266;
+@relief-bg:             lighten(#ffc266, 25%);
+
 //== Typography
 //
 //## Font, line-height, and color for body text, headings, and more.
@@ -727,5 +730,3 @@
 @dl-horizontal-offset:        @component-offset-horizontal;
 //** Horizontal line color.
 @hr-border:                   @gray-lighter;
-
-
