--- a/codalab/apps/web/static/less/navbar.less
+++ b/codalab/apps/web/static/less/navbar.less
@@ -1,6 +1,5 @@
 .navbar.navbar-default.navbar-fixed-top  {
-    border-width:0 0 2px 0;
-    .box-shadow(0 2px 8px @gray-dark);
+    border-width: 0 0 0 0;
     .navbar-header {
         .navbar-brand {
             line-height:@navbar-height - 10;
