--- a/codalab/apps/web/static/less/worksheets.less
+++ b/codalab/apps/web/static/less/worksheets.less
@@ -1,7 +1,5 @@
 @initial-panel-width: 25%;
 @panel-bg: #FBFBFB;
-//@actionbar-focus-height: 170px + 20px;
-//@actionbar-blur-height: 45px + 20px;
 @actionbar-focus-height: 45px;
 @actionbar-blur-height: 45px;
 @item-margin-bottom: 20px;
@@ -43,6 +41,7 @@ html, body, #worksheet_container {height:100%;}
       padding-top:32px;
    }
 }
+
 #worksheet {
    .transition(margin-top .35s ease);
    position:relative;
@@ -231,6 +230,7 @@ html, body, #worksheet_container {height:100%;}
       }
    }
 }
+
 #worksheet_content {
    .panel-frame;
    display:none;
@@ -257,7 +257,7 @@ html, body, #worksheet_container {height:100%;}
    .worksheet-title {
       text-indent:0;
       margin:0;
-      font-size:44px;
+      font-size:28px;
       font-weight:bold;
       line-height:1.1em;
       padding:20px 0 20px 15px;
@@ -406,18 +406,19 @@ html, body, #worksheet_container {height:100%;}
    }
    .type-contents {
       blockquote {
-         padding: 16px 0 16px 24px;
+         padding: 16px 0 16px 16px;
          border-left:4px solid @gray-lighter;
          p {
             font-family: @font-family-monospace;
             color:@gray-dark;
             margin:0;
-            font-size:14px;
+            font-size:12px;
             line-height:1.5;
             white-space:pre;
+            overflow: auto;
          }
       }
-      &:not(.focused) blockquote{
+      &:not(.focused) blockquote {
          background-color:@white-dark;
       }
    }
@@ -620,65 +621,10 @@ html, body, #worksheet_container {height:100%;}
    }
 }
 
-// Worksheet List
-#worksheet-list {
-   .checkbox {
-      margin:20px 0;
-      .my-worksheets-toggle input {
-         margin-right:5px;
-      }
-
-   }
-   .worksheet-tile {
-      .cl-tile;
-      border-left:1px solid @gray-light;
-      padding:0;
-      position:relative;
-      &:hover {
-         cursor:pointer;
-         h3 {
-            color:@brand-primary;
-         }
-      }
-      &.focused {
-         .box-shadow(0 1px 6px fadeout(black, 75%));
-         .worksheet-inner {
-            border-left-color:@brand-success;
-         }
-      }
-      .worksheet-inner {
-         border-left: 10px solid @brand-primary;
-         padding:10px 10px 10px 58px;
-         background:url('/static/img/icon_worksheet.png') no-repeat 5px 10px;
-         min-height:68px;
-         h3 {
-            margin:0;
-            padding-bottom: 0;
-         }
-         .byline {
-            padding-bottom:0.25em;
-         }
-         button.delete-worksheet {
-            position:absolute;
-            bottom:5px;
-            right:5px;
-            opacity:.5;
-            .transition(opacity .35s ease);
-            &:hover {
-               .btn-danger;
-               text-decoration: none;
-               opacity:1;
-            }
-         }
-      }
-   }
-}
-
 // Bundle Detail
 #bundle-content {
    padding-top:15px;
    .bundle-tile {
-      .cl-tile;
       .bundle-header {
          border-bottom:1px solid @gray-light;
          padding-bottom:12px;
@@ -757,7 +703,7 @@ html, body, #worksheet_container {height:100%;}
             overflow: auto;
             word-wrap: normal;
             white-space: pre;
-            font-size:80%;
+            font-size: 80%;
          }
       }
    }
