--- a/codalab/apps/web/templates/web/index.html
+++ b/codalab/apps/web/templates/web/index.html
@@ -19,54 +19,86 @@
 {% block content %}
     <div class="container">
         <div class="row">
-            <div class="col-sm-6 worksheet-random-list">
-                <div class="btn-group btn-group-justified" role="group" aria-label="...">
-                      <div class="btn-group" role="group">
-                            <a role="button" class="btn" href="/worksheets">Browse Worksheets</a>
-                      </div>
-                </div>
-                <p><strong>Browse our growing collection of code, datasets,
-                  and executable papers containing the full provenance of the results.
-                </strong></p>
+          <div class="col-sm-12">
+            <p>
+            To get started, read more about the <a href="https://github.com/codalab/codalab-worksheets/wiki">mission of CodaLab</a>,
+            go through the <a href="https://github.com/codalab/codalab-worksheets/wiki/User_CodaLab-Worksheets-Tutorial">tutorial</a>,
+            or simply <a href="/accounts/signup">create an account</a> and try it out!
+            </p>
+          </div>
+
+          <div class="col-sm-4 col-sm-offset-4">
+            <div class="frontpage-button">
+              {% if user.is_authenticated %}
+                  <a href="/worksheets/?name=dashboard">My Dashboard</a>
+              {% else %}
+                  <a href="/accounts/login/?next=/worksheets/?name=/">Create an account!</a>
+              {% endif %}
             </div>
-            <div class="col-sm-6 worksheet-random-list">
-                <div class="btn-group btn-group-justified" role="group" aria-label="...">
-                      <div class="btn-group" role="group">
-                        {% if user.is_authenticated %}
-                            <a role="button" class="btn" href="/worksheets/?name=/">My Worksheet</a>
-                        {% else %}
-                            <a role="button" class="btn" href="/accounts/login/?next=/worksheets/?name=/">My Worksheet</a>
-                        {% endif %}
-                      </div>
-                </div>
-                <p><strong>Create reproducible experiments in any
-                  programming language by running arbitrary commands.</strong></p>
-            </div>
+          </div>
         </div>
 
         <div class="row">
-            <div class="col-sm-6 worksheet-random-list">
-                <h2 class="homepage_headers">Random Worksheets</h2>
-                {% if not worksheets %}
-                <p><em>There are no worksheets.</em></p>
-                {% else %}
-                    {% for worksheet in worksheets %}
-                        {% include "web/worksheets_latest.html" with worksheet=worksheet %}
-                    {% endfor %}
-                {% endif %}
+          <div class="col-sm-6">
+            <h2 class="frontpage-header">Upload</h2>
+            Upload <i><b>co</b></i>de (in any programming language) and <i><b>da</b></i>ta (in any format) to <i><b>Coda</b></i>Lab.
+            If you're using the <a href="https://github.com/codalab/codalab-worksheets/wiki/User_Install-CodaLab-CLI">command-line interface (CLI)</a>, type, for example:
+            <div class="frontpage-code">
+              $ cl upload train.py
             </div>
-            <div class="col-sm-6 worksheet-random-list">
-              <h2 class="homepage_headers">How It Works</h2>
-              <b>1. Upload programs or datasets (bundles):</b>
-              <blockquote>
-                <div class="frontpage_code">cl upload train.py</div>
-              </blockquote>
-              <b>2. Run commands depending on previous bundles:</b>
-              <blockquote>
-                <div class="frontpage_code">cl run :train.py 'python train.py'</div>
-              </blockquote>
-              <b>3. Manage the runs / describe the results in the worksheet.</b>
+            This produces an immutable <b>bundle</b>:
+            <div class="frontpage-stage">
+              <div class="frontpage-bundle-icon bundle-1">train.py</div>
             </div>
+
+            <h2 class="frontpage-header">Run</h2>
+            Run any bash shell command, which can depend on previous bundles.
+            In the CLI or the web terminal, type, for example:
+            <div class="frontpage-code">
+              $ cl run :train.py 'python train.py --eta 0.2'
+            </div>
+            CodaLab records the execution environment using <a href="https://www.docker.com">docker</a> to ensure
+            reproducibility, and produces a new bundle:
+            <div class="frontpage-stage">
+              <div class="frontpage-bundle-icon bundle-1">train.py</div>
+              &rarr;
+              <div class="frontpage-bundle-icon bundle-2">run17</div>
+            </div>
+            This bundle is added to the global dependency graph over all research assets (see right).
+
+            <h2 class="frontpage-header">Present</h2>
+            Create <b>worksheets</b>
+            to manage your runs, document your experimental results,
+            and publish executable papers.
+            Use <a href="https://github.com/codalab/codalab-worksheets/wiki/User_Worksheet-Markdown">CodaLab markdown</a>
+            to create custom tables and graphs.
+
+          </div>
+          <div class="col-sm-4 col-sm-offset-1">
+            <div class="frontpage-graphic">
+              <img src="{{STATIC_URL}}img/frontpage.png" width="100%" class="img-responsive">
+            </div>
+          </div>
         </div>
+
+        <div class="row">
+          <div class="col-sm-10 col-sm-offset-1">
+            <table class="frontpage-worksheets-list">
+              <tr><td>
+                <div class="frontpage-worksheets-list-header">
+                  Example Worksheets
+                </div> 
+              </td></tr>
+              {% for worksheet in worksheets %}
+                <tr><td>
+                  <div class="frontpage-worksheets-list-item">
+                    <a target="_blank" href="{% url 'ws_view' worksheet.0 %}">{{worksheet.1}}</a> by {{ worksheet.3 }}
+                  </div>
+                </td></tr>
+              {% endfor %}
+            </table>
+          </div>
+        </div>
+
     </div>
 {% endblock content %}
