change some style

--- a/codalab/apps/web/static/css/imports.css
+++ b/codalab/apps/web/static/css/imports.css
@@ -9928,7 +9928,7 @@ textarea.table.affiliation > tbody > tr > td input {
   height: 400px;
   overflow-y: auto;
 }
-#chat-portal-user {
+.chat-portal-user {
   width: 80px;
 }
 #chat-portal-chat-list {
@@ -9938,6 +9938,10 @@ textarea.table.affiliation > tbody > tr > td input {
   height: 400px;
   overflow-y: auto;
 }
-#chat-portal-chat {
+.chat-portal-chat {
   border-bottom: 1px black solid;
+}
+#chat-portal-chat-box-input {
+  height: 100px;
+  width: 500px;
 }
