--- a/codalab/apps/web/static/less/chatportal.less
+++ b/codalab/apps/web/static/less/chatportal.less
@@ -29,7 +29,7 @@
     overflow-y: auto;
 }
 
-#chat-portal-user {
+.chat-portal-user {
     width: 80px;
 }
 
@@ -41,8 +41,13 @@
     overflow-y: auto;
 }
 
-#chat-portal-chat {
+.chat-portal-chat {
     border-bottom: 1px black solid;
+}
+
+#chat-portal-chat-box-input {
+    height: 100px;
+    width: 500px;
 }
 
 
