--- a/codalab/apps/web/static/less/main.less
+++ b/codalab/apps/web/static/less/main.less
@@ -142,11 +142,11 @@ kbd {
   }
 }
 
-.bundle-1 {
+.bg-blue {
   background: @blue;
 }
 
-.bundle-2 {
+.bg-green {
   background: @green;
 }
 
@@ -172,7 +172,7 @@ kbd {
 }
 
 .frontpage-graphic {
-  padding-top: 150px;
+  padding-top: 100px;
 }
 
 .frontpage-worksheets-list {
