--- a/codalab/apps/web/templates/web/index.html
+++ b/codalab/apps/web/templates/web/index.html
@@ -48,7 +48,7 @@
             </div>
             This produces an immutable <b>bundle</b>:
             <div class="frontpage-stage">
-              <div class="frontpage-bundle-icon bundle-1">train.py</div>
+              <div class="frontpage-bundle-icon bg-blue">train.py</div>
             </div>
 
             <h2 class="frontpage-header">Run</h2>
@@ -60,9 +60,9 @@
             CodaLab records the execution environment using <a href="https://www.docker.com">docker</a> to ensure
             reproducibility, and produces a new bundle:
             <div class="frontpage-stage">
-              <div class="frontpage-bundle-icon bundle-1">train.py</div>
+              <div class="frontpage-bundle-icon bg-blue">train.py</div>
               &rarr;
-              <div class="frontpage-bundle-icon bundle-2">run17</div>
+              <div class="frontpage-bundle-icon bg-green">run17</div>
             </div>
             This bundle is added to the global dependency graph over all research assets (see right).
 
@@ -74,9 +74,11 @@
             to create custom tables and graphs.
 
           </div>
-          <div class="col-sm-4 col-sm-offset-1">
+          <div class="col-sm-1">
+          </div>
+          <div class="col-sm-5">
             <div class="frontpage-graphic">
-              <img src="{{STATIC_URL}}img/frontpage.png" width="100%" class="img-responsive">
+              <img src="{{STATIC_URL}}img/frontpage.png" class="img-responsive">
             </div>
           </div>
         </div>
