open external links in new tab

--- a/codalab/apps/web/templates/web/index.html
+++ b/codalab/apps/web/templates/web/index.html
@@ -21,8 +21,8 @@
         <div class="row">
           <div class="col-sm-12">
             <p>
-            To get started, read more about the <a href="https://github.com/codalab/codalab-worksheets/wiki">mission of CodaLab</a>,
-            go through the <a href="https://github.com/codalab/codalab-worksheets/wiki/User_CodaLab-Worksheets-Tutorial">tutorial</a>,
+            To get started, read more about the <a target="_blank" href="https://github.com/codalab/codalab-worksheets/wiki">mission of CodaLab</a>,
+            go through the <a target="_blank" href="https://github.com/codalab/codalab-worksheets/wiki/User_CodaLab-Worksheets-Tutorial">tutorial</a>,
             or simply <a href="/accounts/signup">create an account</a> and try it out!
             </p>
           </div>
@@ -42,7 +42,7 @@
           <div class="col-sm-6">
             <h2 class="frontpage-header">Upload</h2>
             Upload <i><b>co</b></i>de (in any programming language) and <i><b>da</b></i>ta (in any format) to <i><b>Coda</b></i>Lab.
-            If you're using the <a href="https://github.com/codalab/codalab-worksheets/wiki/User_Install-CodaLab-CLI">command-line interface (CLI)</a>, type, for example:
+            If you're using the <a target="_blank" href="https://github.com/codalab/codalab-worksheets/wiki/User_Install-CodaLab-CLI">command-line interface (CLI)</a>, type, for example:
             <div class="frontpage-code">
               $ cl upload train.py
             </div>
@@ -57,7 +57,7 @@
             <div class="frontpage-code">
               $ cl run :train.py 'python train.py --eta 0.2'
             </div>
-            CodaLab records the execution environment using <a href="https://www.docker.com">docker</a> to ensure
+            CodaLab records the execution environment using <a target="_blank" href="https://www.docker.com">docker</a> to ensure
             reproducibility, and produces a new bundle:
             <div class="frontpage-stage">
               <div class="frontpage-bundle-icon bg-blue">train.py</div>
@@ -70,7 +70,7 @@
             Create <b>worksheets</b>
             to manage your runs, document your experimental results,
             and publish executable papers.
-            Use <a href="https://github.com/codalab/codalab-worksheets/wiki/User_Worksheet-Markdown">CodaLab markdown</a>
+            Use <a target="_blank" href="https://github.com/codalab/codalab-worksheets/wiki/User_Worksheet-Markdown">CodaLab markdown</a>
             to create custom tables and graphs.
 
           </div>
