--- a/codalab/apps/web/static/less/main.less
+++ b/codalab/apps/web/static/less/main.less
@@ -124,9 +124,14 @@ kbd {
     }
 }
 
-.frontpage-button {
-  text-align: center;
+.frontpage-buttons {
+  margin: 15px;
   padding: 10px;
+  text-align: center;
+}
+
+.frontpage-button {
+  margin: 15px;
 }
 
 .frontpage-button a {
