--- a/codalab/apps/web/templates/web/index.html
+++ b/codalab/apps/web/templates/web/index.html
@@ -21,18 +21,24 @@
         <div class="row">
           <div class="col-sm-12">
             <p>
-            To get started, read more about the <a target="_blank" href="https://github.com/codalab/codalab-worksheets/wiki">mission of CodaLab</a>,
-            go through the <a target="_blank" href="https://github.com/codalab/codalab-worksheets/wiki/User_CodaLab-Worksheets-Tutorial">tutorial</a>,
-            or simply <a href="/accounts/signup">create an account</a> and try it out!
+            To get started, read about the <a target="_blank" href="https://github.com/codalab/codalab-worksheets/wiki">mission of CodaLab Worksheets</a> or
+            go through the <a target="_blank" href="https://github.com/codalab/codalab-worksheets/wiki/User_CodaLab-Worksheets-Tutorial">tutorial</a>.
             </p>
           </div>
 
-          <div class="col-sm-4 col-sm-offset-4">
-            <div class="frontpage-button">
+          <div class="col-sm-6 col-sm-offset-4">
+            <div class="frontpage-buttons">
               {% if user.is_authenticated %}
+                <span class="frontpage-button">
                   <a href="/worksheets/?name=dashboard">My Dashboard</a>
+                </span>
               {% else %}
-                  <a href="/accounts/login/?next=/worksheets/?name=/">Create an account!</a>
+                <span class="frontpage-button">
+                  <a href="/accounts/signup">Sign Up</a>
+                </span>
+                <span class="frontpage-button">
+                  <a href="/accounts/login">Sign In</a>
+                </span>
               {% endif %}
             </div>
           </div>
