--- a/codalab/apps/web/templates/web/worksheets/detail.html
+++ b/codalab/apps/web/templates/web/worksheets/detail.html
@@ -111,17 +111,7 @@
     <script src="{{ STATIC_URL }}bower_components/d3/d3.min.js"></script>
     <script src="{{ STATIC_URL }}bower_components/c3/c3.min.js"></script>
 
-    <script src="{{ STATIC_URL }}js/vendor/marked.js"></script>
-    <script src="{{ STATIC_URL }}js/vendor/html4-defs.js"></script>
-    <script src="{{ STATIC_URL }}js/vendor/html-sanitizer.js"></script>
-    <script src="{{ STATIC_URL }}js/vendor/underscore-min.js"></script>
-    <script src="{{ STATIC_URL }}js/vendor/react-0.12.2.js"></script>
-    <script src="{{ STATIC_URL }}js/vendor/jquery-editable-poshytip.js"></script>
-    <script src="{{ STATIC_URL }}js/vendor/jquery.terminal-0.8.8_custom.min.js"></script>
-    <script src="{{ STATIC_URL }}js/vendor/jquery-ui.min.js"></script>
-    <script src="{{ STATIC_URL }}js/vendor/jquery.ui.chatbox.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.12/jquery.mousewheel.js"></script>
-    
+
     <script src="{{ STATIC_URL }}bower_components/marked/marked.min.js"></script>
     <script src="{{ STATIC_URL }}js/custom/html4-defs.js"></script>
     <script src="{{ STATIC_URL }}js/custom/html-sanitizer.js"></script>
@@ -129,6 +119,9 @@
     <script src="{{ STATIC_URL }}bower_components/react/react.min.js"></script>
     <script src="{{ STATIC_URL }}bower_components/x-editable/dist/jquery-editable/js/jquery-editable-poshytip.min.js"></script>
     <script src="{{ STATIC_URL }}js/custom/jquery.terminal-0.8.8_custom.min.js"></script>
+    <script src="{{ STATIC_URL }}bower_components/jquery-ui/jquery-ui.min.js"></script>
+    <script src="{{ STATIC_URL }}js/custom/jquery.ui.chatbox.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.12/jquery.mousewheel.js"></script>
 
     <script src="{{ STATIC_URL }}dist/worksheet_utils.js"></script>
     <script src="{{ STATIC_URL }}dist/worksheet_content.js"></script>
