fix more style, add faq

--- a/codalab/apps/web/static/less/chatbox.less
+++ b/codalab/apps/web/static/less/chatbox.less
@@ -37,7 +37,7 @@
     border: 2px solid lightgrey;/* #6699FF */
     padding: 2px;
     height: 50px;
-    width: 300px;
+    width: 100%;
 }
 
 .ui-chatbox-icon {
@@ -58,4 +58,9 @@
     white-space: -pre-wrap;     /* Opera <7 */
     white-space: -o-pre-wrap;   /* Opera 7 */
     word-wrap: break-word;      /* IE */
+}
+
+.chat-box-target {
+    font-weight: bold;
+    color: #739cb9;
 }
