move buttons into green area; make bundle diagram bigger

--- a/codalab/apps/web/static/less/main.less
+++ b/codalab/apps/web/static/less/main.less
@@ -140,7 +140,7 @@ kbd {
   color: @gray-dark;
   text-decoration: none;
   font-weight: bold;
-  font-size: 18px;
+  font-size: 20px;
 
   &:hover {
     background-color: darken(@button-color, 10%);
@@ -184,6 +184,7 @@ kbd {
    background: @relief-bg;
    border-left: 10px solid @brand-success;
    margin: 30px;
+   width: 100%;
 }
 
 .frontpage-worksheets-list-item {
