add documentation for jquery.ui.chatbox, change style

--- a/codalab/apps/web/static/less/chatbox.less
+++ b/codalab/apps/web/static/less/chatbox.less
@@ -33,7 +33,6 @@
 }
 
 .ui-chatbox-input-box {
-    margin: 0px;
     border: 2px solid lightgrey;/* #6699FF */
     padding: 2px;
     height: 50px;
@@ -42,6 +41,11 @@
 
 .ui-chatbox-icon {
     float: right;
+    margin-left: 5px;
+}
+
+.ui-chatbox-icon:hover {
+    color: white;
 }
 
 .ui-chatbox-input-focus {
