--- a/codalab/apps/web/static/less/worksheets.less
+++ b/codalab/apps/web/static/less/worksheets.less
@@ -813,15 +813,62 @@ html, body, #worksheet_container {height:100%;}
    width: 100%;
 }
 
-#run-bundle-builder-form {
-   position:fixed;
-   left: 50%;
-   top: 50%;
-   width: 500px;
-   height: 400px;
-   margin-top: -200px; 
-   margin-left: -250px; 
-   background-color:@gray-light;
+#run-bundle-builder {
    display: none;
+   position:fixed;
+   left: 15%;
+   top: 20%;
+   width: 70%;
+   height: 70%;
+   background-color: white;
    z-index: 200;
+   padding: 5px;
+   border: 2px solid @gray-light;
+}
+
+.run-bundle-container {
+   padding: 10px;
+   width: 50%;
+   height: 80%;
+   float: left;
+}
+
+#bundle-browser {
+   height: 80%;
+   overflow:auto;
+}
+
+#bundle-browser table {
+   margin-bottom: 0px;   
+}
+
+#run-bundle-terminal {
+   background-color: black;
+   color:white;
+   height: 80%;
+   overflow:auto;
+}
+
+.run-bundle-text {
+   height: 20%;
+}
+
+.inline-block {
+   display: inline-block;
+}
+
+.run-bundle-terminal-input {
+   background-color: black;
+}
+
+.run-bundle-terminal-command {
+   width: 95%;
+}
+
+#run-bundle-button {
+   width: 60px;
+   height: 30px;
+   position: relative;
+   left: 50%;
+   margin-left: -30px;
 }
