--- a/codalab/apps/web/static/less/worksheets.less
+++ b/codalab/apps/web/static/less/worksheets.less
@@ -812,3 +812,16 @@ html, body, #worksheet_container {height:100%;}
 .bundle-upload-progress-bar {
    width: 100%;
 }
+
+#new-worksheet {
+   display: none;
+   position:fixed;
+   left: 25%;
+   top: 25%;
+   width: 50%;
+   height: 50%;
+   background-color: white;
+   z-index: 200;
+   padding: 5px;
+   border: 2px solid @gray-light;
+}
