--- a/codalab/apps/web/templates/web/worksheets/detail.html
+++ b/codalab/apps/web/templates/web/worksheets/detail.html
@@ -132,6 +132,8 @@
     {# ------- JSX FILES  ------- #}
     <script src="{{ STATIC_URL }}dist/worksheet_action_bar.js"></script>
     <script src="{{ STATIC_URL }}dist/worksheet_side_panel.js"></script>
+    <script src="{{ STATIC_URL }}dist/new_worksheet.js"></script>
+
     {# bundle type renders/actions #}
     <script src="{{ STATIC_URL }}dist/contents_item_interface.js"></script>
     <script src="{{ STATIC_URL }}dist/html_item_interface.js"></script>
