--- a/codalab/apps/web/templates/base.html
+++ b/codalab/apps/web/templates/base.html
@@ -80,6 +80,7 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="/worksheets/?name=home" tabIndex=2 target="_self">Public Home</a></li>
                         {% if user.is_authenticated %}
+                          <li><a href="/worksheets/?name=/" tabIndex=2 target="_self">My Home</a></li>
                           <li><a href="/worksheets/?name=dashboard" tabIndex=2 target="_self">My Dashboard</a></li>
                         {% endif %}
                         <li>
