--- a/codalab/apps/web/static/less/worksheets.less
+++ b/codalab/apps/web/static/less/worksheets.less
@@ -861,11 +861,11 @@ html, body, #worksheet_container {height:100%;}
    background-color: black;
 }
 
-.run-bundle-terminal-command {
+#run-bundle-terminal-command {
    width: 95%;
 }
 
-#run-bundle-button {
+.pop-up-button {
    width: 60px;
    height: 30px;
    position: relative;
