--- a/codalab/apps/web/static/less/worksheets.less
+++ b/codalab/apps/web/static/less/worksheets.less
@@ -816,12 +816,14 @@ html, body, #worksheet_container {height:100%;}
 #new-worksheet {
    display: none;
    position:fixed;
-   left: 25%;
-   top: 25%;
-   width: 50%;
-   height: 50%;
+   left: 40%;
+   top: 40%;
+   width: 20%;
+   height: 20%;
    background-color: white;
    z-index: 200;
    padding: 5px;
    border: 2px solid @gray-light;
 }
+
+.pop-up-
