--- a/codalab/apps/web/static/less/worksheets.less
+++ b/codalab/apps/web/static/less/worksheets.less
@@ -816,14 +816,46 @@ html, body, #worksheet_container {height:100%;}
 #new-worksheet {
    display: none;
    position:fixed;
-   left: 40%;
-   top: 40%;
-   width: 20%;
-   height: 20%;
+   left: 50%;
+   top: 50%;
+   width: 320px;
+   height: 200px;
+   margin-left: -160px;
+   margin-top: -100px;
    background-color: white;
    z-index: 200;
-   padding: 5px;
+   padding: 15px;
    border: 2px solid @gray-light;
 }
 
-.pop-up-
+#new-worksheet-button {
+   right: 5%;
+   bottom: 5%;
+   position: absolute;
+}
+
+#new-worksheet-input {
+   width: 100%;
+}
+
+.pop-up-button {
+   width: 60px;
+   height: 30px;
+   margin: 5px;
+}
+
+.pop-up-title {
+   padding: 2px;
+   font-size: 20px;
+   font-weight: bold;
+}
+
+.pop-up-text {
+   padding: 3px;
+   font-size: 14px;
+}
+
+.pop-up-command {
+   color: #739cb9;
+}
+
