--- a/codalab/apps/web/static/less/imports.less
+++ b/codalab/apps/web/static/less/imports.less
@@ -14,3 +14,5 @@
 // Import sections/pages
 @import "worksheets.less";
 @import "actionbar.less";
+@import "popup.less";
+@import "run_bundle_builder.less";
