--- a/codalab/apps/web/static/less/imports.less
+++ b/codalab/apps/web/static/less/imports.less
@@ -14,3 +14,5 @@
 // Import sections/pages
 @import "worksheets.less";
 @import "actionbar.less";
+@import "imports.less";
+@import "new_worksheet.less";
