forgot to change imports.less 2

--- a/codalab/apps/web/static/less/imports.less
+++ b/codalab/apps/web/static/less/imports.less
@@ -14,5 +14,5 @@
 // Import sections/pages
 @import "worksheets.less";
 @import "actionbar.less";
-@import "imports.less";
+@import "popup.less";
 @import "new_worksheet.less";
