--- a/codalab/apps/web/static/less/run_bundle_builder.less
+++ b/codalab/apps/web/static/less/run_bundle_builder.less
@@ -13,13 +13,14 @@
 
 .run-bundle-container {
    padding: 10px;
+   padding-top: 0px;
    width: 50%;
    height: 80%;
    float: left;
 }
 
 #bundle-browser {
-   height: 80%;
+   height: 75%;
    overflow:auto;
 }
 
@@ -30,12 +31,12 @@
 #run-bundle-terminal {
    background-color: black;
    color:white;
-   height: 80%;
+   height: 75%;
    overflow:auto;
 }
 
 .run-bundle-text {
-   height: 20%;
+   height: 25%;
 }
 
 .inline-block {
@@ -48,4 +49,18 @@
 
 #run-bundle-terminal-command {
    width: 95%;
+}
+
+.collapsible-content-collapsed {
+	display: none;
+}
+
+#run-bundle-button {
+	position: absolute;
+	bottom: 10px;
+	right: 10px;
+}
+
+#run-bundle-builder input[type="checkbox"] {
+	margin-right: 5px;
 }
