almost done, todo: two tasks, swtich ws and update bundle list

--- a/codalab/apps/web/static/less/run_bundle_builder.less
+++ b/codalab/apps/web/static/less/run_bundle_builder.less
@@ -21,7 +21,7 @@
 
 #bundle-browser {
    height: 75%;
-   overflow:auto;
+   overflow-y: scroll;
 }
 
 #bundle-browser table {
@@ -32,7 +32,7 @@
    background-color: black;
    color:white;
    height: 75%;
-   overflow:auto;
+   overflow-y: scroll;
 }
 
 .run-bundle-text {
@@ -63,4 +63,10 @@
 
 #run-bundle-builder input[type="checkbox"] {
 	margin-right: 5px;
+}
+
+#run-bundle-cl-command {
+	width: 80%;
+	height: 20px;
+	overflow-y: scroll;
 }
