--- a/codalab/apps/web/templates/web/bundles/detail.html
+++ b/codalab/apps/web/templates/web/bundles/detail.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 
-{% block head_title %}Bundle: {{bundle_title}}{% endblock head_title %}
-{% block page_title %}Bundle: {{bundle_title}}{% endblock page_title %}
+{% block head_title %}Bundle{% endblock head_title %}
+{% block page_title %}Bundle Details{% endblock page_title %}
 {% block meta %}
-    <meta property="og:title" content="Bundle: {{bundle_title}}">
+    <meta property="og:title" content="Bundle">
     <meta property="og:site_name" content="CodaLab">
     <meta property="og:type" content="article">
     <meta property="og:image" content="{{ request.META.HTTP_HOST }}{{STATIC_URL}}img/codalab-logo.png">
