--- a/codalab/apps/web/static/less/chatportal.less
+++ b/codalab/apps/web/static/less/chatportal.less
@@ -17,7 +17,7 @@
     top: 10%;
     left: 10%;
     width: 80%;
-    height: 80%;
+    height: 90%;
     padding: 2px;
     background: #FFFFFF;
     border: 2px solid #EEEEEE;
@@ -40,9 +40,7 @@
 }
 
 #chat-portal-chat-list {
-    position: relative;
-    float: right;
-    width: 85%;
+    margin-left: 12%;
     height: 100%;
     overflow-y: auto;
 }
@@ -59,6 +57,7 @@
 
 .chat-portal-chat-timestamp {
     float: right;
+    margin-right: 10px;
     color: #CCCCCC;
 }
 
