--- a/codalab/apps/web/static/less/run_bundle_builder.less
+++ b/codalab/apps/web/static/less/run_bundle_builder.less
@@ -20,7 +20,7 @@
 }
 
 #bundle-browser {
-   height: 75%;
+   height: 80%;
    overflow-y: scroll;
 }
 
@@ -31,12 +31,12 @@
 #run-bundle-terminal {
    background-color: black;
    color:white;
-   height: 75%;
+   height: 80%;
    overflow-y: scroll;
 }
 
 .run-bundle-text {
-   height: 25%;
+   height: 20%;
 }
 
 .inline-block {
@@ -52,21 +52,26 @@
 }
 
 .collapsible-content-collapsed {
-	display: none;
+   display: none;
 }
 
 #run-bundle-button {
-	position: absolute;
-	bottom: 10px;
-	right: 10px;
+   position: absolute;
+   bottom: 10px;
+   right: 10px;
 }
 
 #run-bundle-builder input[type="checkbox"] {
-	margin-right: 5px;
+   margin-right: 5px;
 }
 
 #run-bundle-cl-command {
-	width: 80%;
-	height: 20px;
-	overflow-x: scroll;
+   height: 30px;
+}
+
+#run-bundle-cl-command-container {
+   width: 70%;
+   overflow-x: auto;
+   overflow-y: hidden;
+   white-space: nowrap;
 }
