finish a bunch of style stuffs

--- a/codalab/apps/web/static/less/run_bundle_builder.less
+++ b/codalab/apps/web/static/less/run_bundle_builder.less
@@ -19,6 +19,10 @@
    float: left;
 }
 
+.run-bundle-text {
+   height: 20%;
+}
+
 #bundle-browser {
    height: 80%;
    overflow-y: scroll;
@@ -28,19 +32,20 @@
    margin-bottom: 0px;   
 }
 
+.inline-block {
+   display: inline-block;
+}
+
 #run-bundle-terminal {
    background-color: black;
    color:white;
    height: 80%;
+   padding: 10px;
    overflow-y: scroll;
 }
 
-.run-bundle-text {
-   height: 20%;
-}
-
-.inline-block {
-   display: inline-block;
+.run-bundle-terminal-item {
+   padding: 3px;
 }
 
 .run-bundle-terminal-input {
