--- a/codalab/apps/web/templates/web/worksheets/detail.html
+++ b/codalab/apps/web/templates/web/worksheets/detail.html
@@ -127,6 +127,8 @@
     <script src="{{ STATIC_URL }}js/custom/jquery.ui.chatbox.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.12/jquery.mousewheel.js"></script>
 
+    <script src="{{ STATIC_URL }}dist/button.js"></script>
+
     <script src="{{ STATIC_URL }}dist/worksheet_utils.js"></script>
     <script src="{{ STATIC_URL }}dist/worksheet_content.js"></script>
     <script src="{{ STATIC_URL }}dist/ws_mousetrap_fork.js"></script>
