--- a/codalab/apps/web/templates/base.html
+++ b/codalab/apps/web/templates/base.html
@@ -19,7 +19,11 @@
     <title>CodaLab - {% block head_title %}{% endblock %}</title>
 
     {% block css %}
-        <!-- Add a timestamp to the account CSS name to prevent caching. -->
+        <!--
+        Read CSS that hides / shows buttons depending on whether the user is
+        logged in or not, and fills in the user name. Add a timestamp to prevent
+        caching.
+        -->
         <link rel="stylesheet" href="/rest/account/css?={% now "U" %}">
         <!-- Included CSS Files (Compressed) -->
         <link rel="stylesheet" href="{{ STATIC_URL }}css/jquery.dataTables.css">
