--- a/codalab/apps/web/static/less/worksheets.less
+++ b/codalab/apps/web/static/less/worksheets.less
@@ -752,6 +752,10 @@ html, body, #worksheet_container {height:100%;}
    }
 }
 
+.file-browser-arrow {
+   cursor: pointer;
+}
+
 // Worksheet Editor
 #worksheet-editor {
    margin: 0;
