--- a/codalab/apps/web/static/less/run_bundle_builder.less
+++ b/codalab/apps/web/static/less/run_bundle_builder.less
@@ -1,10 +1,12 @@
 #run-bundle-builder {
    display: none;
    position:fixed;
-   left: 15%;
-   top: 20%;
-   width: 70%;
-   height: 70%;
+   left: 50%;
+   top: 50%;
+   width: 800px;
+   height: 450px;
+   margin-left: -400px;
+   margin-top: -200px;
    background-color: white;
    z-index: 200;
    padding: 5px;
@@ -76,8 +78,11 @@
 }
 
 #run-bundle-cl-command-container {
+   height: 20%;
    width: 70%;
    overflow-x: auto;
    overflow-y: hidden;
    white-space: nowrap;
+   position: relative;
+   top: 15px;
 }
