change the style of three buttons

--- a/codalab/apps/web/static/less/worksheets.less
+++ b/codalab/apps/web/static/less/worksheets.less
@@ -813,6 +813,10 @@ html, body, #worksheet_container {height:100%;}
    display: none;
 }
 
+#bundle-upload-progress-bars {
+   position: absolute;
+}
+
 .bundle-upload-progress-bar {
    width: 100%;
 }
