--- a/codalab/apps/web/static/less/worksheets.less
+++ b/codalab/apps/web/static/less/worksheets.less
@@ -128,6 +128,12 @@ html, body, #worksheet_container {height:100%;}
       height:100%;
       overflow:auto;
    }
+   .ws-button-group {
+      white-space: nowrap;
+   }
+   .ws-button-group * {
+      white-space: normal;
+   }
    .ws-panel {
       width:@initial-panel-width;
       min-width:200px;
@@ -135,7 +141,6 @@ html, body, #worksheet_container {height:100%;}
       right:0;
       height:100%;
       overflow:auto;
-      white-space: nowrap;
       padding: 10px @grid-gutter-width/3;
       background:@panel-bg;
       font-size:14px;
