fix private bundle issue

--- a/codalab/apps/web/templates/web/bundles/detail.html
+++ b/codalab/apps/web/templates/web/bundles/detail.html
@@ -30,6 +30,7 @@
     <script src="{{ STATIC_URL }}bower_components/react/react.min.js"></script>
     {# TODO: remove JSX and move to deploy processing of JSX #}
     <script src="{{ STATIC_URL }}dist/worksheet_utils.js"></script>
+    <script src="{{ STATIC_URL }}dist/file_browser.js"></script>
     <script src="{{ STATIC_URL }}dist/bundle_interface.js"></script>
 <script>
 //
