context menu done

--- a/codalab/apps/web/templates/web/worksheets/detail.html
+++ b/codalab/apps/web/templates/web/worksheets/detail.html
@@ -125,6 +125,10 @@
     <script src="{{ STATIC_URL }}js/custom/html-sanitizer.js"></script>
     <script src="{{ STATIC_URL }}bower_components/underscore/underscore-min.js"></script>
     <script src="{{ STATIC_URL }}bower_components/react/react.min.js"></script>
+    <script src="{{ STATIC_URL }}bower_components/eventemitter/src/EventEmitter.js"></script>
+    <script src="{{ STATIC_URL }}bower_components/eventemitter/src/helpers.js"></script>
+
+
     <script src="{{ STATIC_URL }}bower_components/x-editable/dist/jquery-editable/js/jquery-editable-poshytip.min.js"></script>
     <script src="{{ STATIC_URL }}js/custom/jquery.terminal-0.8.8_custom.min.js"></script>
     <script src="{{ STATIC_URL }}bower_components/jquery-ui/jquery-ui.min.js"></script>
@@ -132,6 +136,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.12/jquery.mousewheel.js"></script>
 
     <script src="{{ STATIC_URL }}dist/button.js"></script>
+    <script src="{{ STATIC_URL }}dist/context_menu.js"></script>
+
 
     <script src="{{ STATIC_URL }}dist/worksheet_utils.js"></script>
     <script src="{{ STATIC_URL }}dist/worksheet_content.js"></script>
