side panel fixed

--- a/codalab/apps/web/templates/web/worksheets/detail.html
+++ b/codalab/apps/web/templates/web/worksheets/detail.html
@@ -141,6 +141,7 @@
     {# ------- JSX FILES  ------- #}
     <script src="{{ STATIC_URL }}dist/worksheet_action_bar.js"></script>
     <script src="{{ STATIC_URL }}dist/worksheet_side_panel.js"></script>
+    <script src="{{ STATIC_URL }}dist/bundle_interface.js"></script>
     <script src="{{ STATIC_URL }}dist/file_browser.js"></script>
     <script src="{{ STATIC_URL }}dist/new_worksheet.js"></script>
     <script src="{{ STATIC_URL }}dist/worksheet_chat_box.js"></script>
