got the correct bower component

--- a/codalab/apps/web/templates/web/worksheets/detail.html
+++ b/codalab/apps/web/templates/web/worksheets/detail.html
@@ -125,8 +125,7 @@
     <script src="{{ STATIC_URL }}js/custom/html-sanitizer.js"></script>
     <script src="{{ STATIC_URL }}bower_components/underscore/underscore-min.js"></script>
     <script src="{{ STATIC_URL }}bower_components/react/react.min.js"></script>
-    <script src="{{ STATIC_URL }}bower_components/eventemitter/src/EventEmitter.js"></script>
-    <script src="{{ STATIC_URL }}bower_components/eventemitter/src/helpers.js"></script>
+    <script src="{{ STATIC_URL }}bower_components/eventEmitter/EventEmitter.min.js"></script>
     <script src="{{ STATIC_URL }}bower_components/x-editable/dist/jquery-editable/js/jquery-editable-poshytip.min.js"></script>
     <script src="{{ STATIC_URL }}js/custom/jquery.terminal-0.8.8_custom.min.js"></script>
     <script src="{{ STATIC_URL }}bower_components/jquery-ui/jquery-ui.min.js"></script>
