--- a/codalab/apps/web/templates/web/worksheets/detail.html
+++ b/codalab/apps/web/templates/web/worksheets/detail.html
@@ -147,6 +147,7 @@
     <script src="{{ STATIC_URL }}dist/worksheet_chat_box.js"></script>
     <script src="{{ STATIC_URL }}dist/worksheet_chat_portal.js"></script>
     <script src="{{ STATIC_URL }}dist/faq.js"></script>
+    <script src="{{ STATIC_URL }}dist/collapsible.js"></script>
 
     {# bundle type renders/actions #}
     <script src="{{ STATIC_URL }}dist/contents_item_interface.js"></script>
