--- a/codalab/apps/web/templates/web/bundles/detail.html
+++ b/codalab/apps/web/templates/web/bundles/detail.html
@@ -37,6 +37,7 @@
     <script src="{{ STATIC_URL }}dist/file_browser.js"></script>
     <script src="{{ STATIC_URL }}dist/bundle_interface.js"></script>
     <script src="{{ STATIC_URL }}dist/editable_field.js"></script>
+    <script src="{{ STATIC_URL }}dist/collapsible.js"></script>
     <script src="{{ STATIC_URL }}bower_components/x-editable/dist/jquery-editable/js/jquery-editable-poshytip.min.js"></script>
 <script>
 //
