change codalab log

--- a/codalab/apps/web/templates/web/index.html
+++ b/codalab/apps/web/templates/web/index.html
@@ -8,7 +8,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 col-md-8 col-md-offset-2">
-                    <img src="{{STATIC_URL}}img/codalab-logo-white.png" alt="CodaLab" class="img-responsive">
+                    <img src="{{STATIC_URL}}img/codalab-logo-onecolor-reverse.png" alt="CodaLab" class="img-responsive">
                     <h4><b><i>A collaborative platform for reproducible research.</i></b></h4>
                     <div class="frontpage-buttons">
                         <span class="user-authenticated frontpage-button">
@@ -107,4 +107,3 @@
     <script src="{{ STATIC_URL }}bower_components/react/react.min.js"></script>
     <script src="{{ STATIC_URL }}dist/sample_worksheets_interface.js"></script>
 {% endblock jsincludes %}
-
