cosmetics for bundle detail

--- a/codalab/apps/web/static/less/bundle.less
+++ b/codalab/apps/web/static/less/bundle.less
@@ -5,7 +5,7 @@
       border-bottom:1px solid @gray-light;
       padding-bottom:6px;
       margin-bottom:12px;
-      line-height:@font-size-h3;
+      line-height:@line-height-base;
       h2 {
          margin:0;
          background-position-y:8px;
@@ -26,6 +26,13 @@
    }
    .bundle-meta {
      margin-bottom: 30px;
+     .editable {
+       color: brown;
+     }
+     td {
+       width: 50%;
+       line-height: 2;
+     }
    }
    h3 {
       margin-top:20px;
