--- a/codalab/apps/web/static/less/worksheets.less
+++ b/codalab/apps/web/static/less/worksheets.less
@@ -220,6 +220,8 @@ html, body, #worksheet_container {height:100%;}
                th, td {
                   border-top:none;
                   padding:1px 6px;
+                  width: 50%;
+                  line-height: 2.4;
                }
                > thead > tr > th {
                   border-bottom-width:1px;
