--- a/codalab/apps/web/static/less/bundle.less
+++ b/codalab/apps/web/static/less/bundle.less
@@ -13,11 +13,13 @@
       .bundle-name {
         flex: 1;
       }
-      .bundle-download {
-        width: 52px;
-        height: 45px;
-        padding-top: 12px;
-        margin-top: 10px;
+      .bundle-links {
+        .bundle-download {
+          width: 52px;
+          height: 45px;
+          padding-top: 12px;
+          margin-top: 10px;
+        }
       }
    }
    .bundle-description {
