--- a/codalab/apps/web/static/less/worksheets.less
+++ b/codalab/apps/web/static/less/worksheets.less
@@ -156,18 +156,11 @@ html, body, #worksheet_container {height:100%;}
             margin-bottom:@line-height-computed / 2;
             font-size:24px;
             line-height:1.1em;
-            &.bundle-name {
-               .bundle-icon-sm;
-               padding-left:30px;
-               background-size:20px;
-               background-position:0 7px;
-            }
             &.ws-name {
                .worksheet-icon-sm;
                padding-left:26px;
                background-size:20px;
                background-position:0 7px;
-
             }
          }
          h4 {
@@ -185,12 +178,6 @@ html, body, #worksheet_container {height:100%;}
             margin: 12px 0;
          }
 
-         .bundle-header {
-           display: flex;
-         }
-         .bundle-name {
-           flex: 1;
-         }
          .bundle-links {
             position:relative;
             .bundle-link {
@@ -199,13 +186,14 @@ html, body, #worksheet_container {height:100%;}
                display:inline-block;
                padding-right:40px;
             }
-            .bundle-download {
-               margin-top:15px;
-            }
          }
          .bundle-meta {
             font-size:90%;
             margin-bottom:20px;
+            input {
+              padding: 0px;
+              line-height: 1.0em;
+            }
             .editable {
               color: brown;
             }
@@ -221,7 +209,7 @@ html, body, #worksheet_container {height:100%;}
                   border-top:none;
                   padding:1px 6px;
                   width: 50%;
-                  line-height: 2.4;
+                  line-height: 1.8em;
                }
                > thead > tr > th {
                   border-bottom-width:1px;
