call new upload bundle rest api on the web and show progress bar

--- a/codalab/apps/web/static/less/worksheets.less
+++ b/codalab/apps/web/static/less/worksheets.less
@@ -733,3 +733,19 @@ html, body, #worksheet_container {height:100%;}
 .bundle-upload-progress-bar {
    width: 100%;
 }
+
+.progressbar {
+  border-radius: 0 !important;
+}
+
+.progress-label {
+  position: absolute;
+  color: white;
+  font-size: 12px;
+}
+
+.ui-progressbar .ui-progressbar-value {
+  background: #739cb9;
+  margin: 0 !important;
+  border-radius: 0 !important;
+}
