--- a/codalab/apps/web/templates/web/worksheets/detail.html
+++ b/codalab/apps/web/templates/web/worksheets/detail.html
@@ -119,7 +119,6 @@
     <script src="{{ STATIC_URL }}bower_components/d3/d3.min.js"></script>
     <script src="{{ STATIC_URL }}bower_components/c3/c3.min.js"></script>
 
-
     <script src="{{ STATIC_URL }}bower_components/marked/marked.min.js"></script>
     <script src="{{ STATIC_URL }}js/custom/html4-defs.js"></script>
     <script src="{{ STATIC_URL }}js/custom/html-sanitizer.js"></script>
@@ -129,6 +128,7 @@
     <script src="{{ STATIC_URL }}bower_components/x-editable/dist/jquery-editable/js/jquery-editable-poshytip.min.js"></script>
     <script src="{{ STATIC_URL }}js/custom/jquery.terminal-0.8.8_custom.min.js"></script>
     <script src="{{ STATIC_URL }}bower_components/jquery-ui/jquery-ui.min.js"></script>
+    <link href="{{ STATIC_URL }}bower_components/jquery-ui/themes/smoothness/jquery-ui.min.css" rel="stylesheet" type="text/css">
     <script src="{{ STATIC_URL }}js/custom/jquery.ui.chatbox.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.12/jquery.mousewheel.js"></script>
 
