--- a/codalab/apps/web/static/less/worksheets.less
+++ b/codalab/apps/web/static/less/worksheets.less
@@ -735,7 +735,7 @@ html, body, #worksheet_container {height:100%;}
 }
 
 .progressbar {
-  width: 290px;
+  width: 310px;
   height: 45px !important;
   border-radius: 0 !important;
   background: #f5f5f5 !important;
@@ -747,6 +747,7 @@ html, body, #worksheet_container {height:100%;}
   color: white;
   font-size: 12px;
   padding: 3px;
+  white-space: pre !important;
 }
 
 .ui-progressbar .ui-progressbar-value {
